chore(ci): migrate Docker images to poweradmin/poweradmin registry

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -17,7 +17,7 @@ concurrency:
 
 env:
   GHCR_IMAGE_NAME: poweradmin
-  DOCKERHUB_IMAGE_NAME: edmondas/poweradmin
+  DOCKERHUB_IMAGE_NAME: poweradmin/poweradmin
 
 jobs:
   build-push:
