fix(devcontainer): add 172.19.0.0/16 to PowerDNS webserver ACL

--- a/.devcontainer/conf/pdns.conf
+++ b/.devcontainer/conf/pdns.conf
@@ -15,7 +15,7 @@ gpgsql-dbname=pdns
 webserver=yes
 webserver-address=0.0.0.0
 webserver-port=8081
-webserver-allow-from=172.18.0.0/16,192.168.0.0/16,127.0.0.1,::1
+webserver-allow-from=172.18.0.0/16,172.19.0.0/16,192.168.0.0/16,127.0.0.1,::1
 webserver-password=poweradmin
 
 api=yes
