feat(dns): add interactive wizards for complex DNS record types, closes #685

--- a/composer.json
+++ b/composer.json
@@ -97,10 +97,10 @@
         "@analyse:phpstan"
     ],
 
-    "compat:8.1": "phan --target-php-version=8.1 --allow-polyfill-parser --no-progress-bar",
-    "compat:8.2": "phan --target-php-version=8.2 --allow-polyfill-parser --no-progress-bar",
-    "compat:8.3": "phan --target-php-version=8.3 --allow-polyfill-parser --no-progress-bar",
-    "compat:8.4": "phan --target-php-version=8.4 --allow-polyfill-parser --no-progress-bar",
+    "compat:8.1": "phan --target-php-version=8.1 --allow-polyfill-parser",
+    "compat:8.2": "phan --target-php-version=8.2 --allow-polyfill-parser",
+    "compat:8.3": "phan --target-php-version=8.3 --allow-polyfill-parser",
+    "compat:8.4": "phan --target-php-version=8.4 --allow-polyfill-parser",
     "compat:all": [
         "@compat:8.1",
         "@compat:8.2",
