--- a/renovate.json
+++ b/renovate.json
@@ -3,6 +3,9 @@
   "extends": [
     "config:recommended"
   ],
+  "constraints": {
+    "php": "8.1"
+  },
   "packageRules": [
     {
       "matchDepTypes": ["require-dev"],
