chore(ci): refine issue labeling and assignment

--- a/.github/workflows/auto-assign.yml
+++ b/.github/workflows/auto-assign.yml
@@ -20,3 +20,4 @@ jobs:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
           assignees: edmondas
           numOfAssignee: 1
+          abortIfPreviousAssignees: false
