--- a/renovate.json
+++ b/renovate.json
@@ -18,6 +18,24 @@
       "matchPackageNames": ["php"],
       "allowedVersions": "8.2",
       "description": "Pin PHP Docker image to 8.2.x"
+    },
+    {
+      "matchDatasources": ["packagist"],
+      "matchPackageNames": ["phpunit/phpunit"],
+      "allowedVersions": "<12.0",
+      "description": "PHPUnit 12 requires PHP 8.3+"
+    },
+    {
+      "matchDatasources": ["packagist"],
+      "matchPackageNames": ["squizlabs/php_codesniffer"],
+      "allowedVersions": "<4.0",
+      "description": "PHP_CodeSniffer 4.0 requires PHP 8.3+"
+    },
+    {
+      "matchDatasources": ["packagist"],
+      "matchPackageNames": ["vimeo/psalm"],
+      "allowedVersions": "<6.0",
+      "description": "Psalm 6.0 requires PHP 8.3+"
     }
   ]
 }
