chore(config): update CI automation rules

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -115,6 +115,9 @@ infra:
       - 'lib/Infrastructure/**'
       - '.github/workflows/**'
       - 'Dockerfile'
+      - '.devcontainer/**/*.Dockerfile'
+      - '.devcontainer/docker-compose*.yml'
+      - '.devcontainer/*.sh'
       - 'docker-compose*.yml'
       - '.dockerignore'
       - 'nginx.conf.example'
