chore: update automation configuration

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -136,6 +136,8 @@ docs:
       - 'docs/**'
       - '*.md'
       - '!CLAUDE.md'
+      - '!vendor/**'
+      - '!node_modules/**'
       - 'LICENSE'
       - 'CHANGELOG.md'
       - 'README.md'
@@ -154,3 +156,5 @@ dependencies:
       - 'composer.lock'
       - 'package.json'
       - 'package-lock.json'
+      - '!vendor/**'
+      - '!node_modules/**'
