--- a/composer.json
+++ b/composer.json
@@ -123,7 +123,7 @@
       ".devcontainer",
       ".github",
       ".phan",
-      "cypress/",
+      "playwright/",
       "install/",
       "tests",
       "tools/",
@@ -132,7 +132,7 @@
       ".hadolint.yaml",
       ".php-cs-fixer.cache",
       ".php-cs-fixer.php",
-      "cypress.config.js",
+      "playwright.config.js",
       "DONORS.md",
       "package.json",
       "phpcs.xml",
