--- a/.gitattributes
+++ b/.gitattributes
@@ -1,11 +1,11 @@
 .devcontainer/ export-ignore
 .github/ export-ignore
-cypress/ export-ignore
+playwright/ export-ignore
 tests/ export-ignore
 .dockerignore export-ignore
 .gitignore export-ignore
 .php-cs-fixer.php export-ignore
-cypress.config.js export-ignore
+playwright.config.js export-ignore
 DONORS.md export-ignore
 package.json export-ignore
 phinx.php export-ignore
