ci: improve workflow execution and dependency management

--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -95,6 +95,7 @@ jobs:
   compatibility:
     name: PHP ${{ matrix.php-version }} Compatibility
     runs-on: ubuntu-latest
+    needs: build
 
     strategy:
       fail-fast: false
