--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,9 +1,13 @@
 name: Docker Image Publish
 
 on:
-  push:
+  workflow_run:
+    workflows: ["validations"]
+    types:
+      - completed
     branches:
       - master
+  push:
     tags:
       - 'v*'
   pull_request:
@@ -23,6 +27,7 @@ jobs:
   build-push:
     runs-on: ubuntu-latest
     timeout-minutes: 60
+    if: github.event_name != 'workflow_run' || github.event.workflow_run.conclusion == 'success'
     permissions:
       contents: write
       packages: write
@@ -33,6 +38,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v5
+        with:
+          ref: ${{ github.event_name == 'workflow_run' && github.event.workflow_run.head_sha || github.ref }}
 
       - name: Lint Dockerfile with hadolint
         uses: hadolint/hadolint-action@v3.3.0
@@ -72,7 +79,7 @@ jobs:
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}
             type=semver,pattern={{major}}
-            type=raw,value=latest,enable=${{ github.ref == 'refs/heads/master' }}
+            type=raw,value=latest,enable=${{ github.event_name == 'workflow_run' || github.ref == 'refs/heads/master' }}
             type=raw,value=latest,enable=${{ startsWith(github.ref, 'refs/tags/v') }}
 
       - name: Build and push
