--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -7,12 +7,14 @@ on:
       - completed
     branches:
       - master
+      - develop
   push:
     tags:
       - 'v*'
   pull_request:
     branches:
       - master
+      - develop
   workflow_dispatch:
 
 concurrency:
@@ -79,8 +81,9 @@ jobs:
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}
             type=semver,pattern={{major}}
-            type=raw,value=latest,enable=${{ github.event_name == 'workflow_run' || github.ref == 'refs/heads/master' }}
+            type=raw,value=latest,enable=${{ github.event_name == 'workflow_run' && github.event.workflow_run.head_branch == 'master' || github.ref == 'refs/heads/master' }}
             type=raw,value=latest,enable=${{ startsWith(github.ref, 'refs/tags/v') }}
+            type=raw,value=dev,enable=${{ github.event_name == 'workflow_run' && github.event.workflow_run.head_branch == 'develop' || github.ref == 'refs/heads/develop' }}
 
       - name: Build and push
         id: build
