chore: update gitattributes with additional export-ignore entries

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,16 +1,26 @@
 .devcontainer/ export-ignore
-.github/ export-ignore
-playwright/ export-ignore
-tests/ export-ignore
 .dockerignore export-ignore
+.github/ export-ignore
 .gitignore export-ignore
+.hadolint.yaml export-ignore
+.phan/ export-ignore
 .php-cs-fixer.php export-ignore
-playwright.config.js export-ignore
+.vscode/ export-ignore
+CONTRIBUTING.md export-ignore
+docs/ export-ignore
 DONORS.md export-ignore
 package.json export-ignore
 phinx.php export-ignore
 phpcs.xml export-ignore
 phpdoc.dist.xml export-ignore
+phpmd.xml export-ignore
+phpstan.neon export-ignore
 phpunit.xml.dist export-ignore
+playwright.config.js export-ignore
+playwright/ export-ignore
+psalm-baseline.xml export-ignore
 psalm.xml export-ignore
+renovate.json export-ignore
+test-results/ export-ignore
+tests/ export-ignore
 transifex.yml export-ignore
